--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tasty Bites</title>
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/icon.png">
     
 </head>
@@ -46,7 +47,28 @@
             background: url(images/apples.jpg);
             height: 400px;
             width: 500px;
+            background-position: center;
+            background-repeat: no-repeat;
         }
     </style>
+    <div id="image"></div>
+    <h1>Frouits</h1>
+    <div class="items">
+        <h3>Apple</h3>
+        <p>Apple, (Malus domestica), fruit of the domesticated tree Malus domestica (family Rosaceae), one of the most widely cultivated tree fruits. The apple is a pome (fleshy) fruit, in which the ripened ovary and surrounding tissue both become fleshy and edible.</p>
+    </div>
+    <div class="items">
+        <h3>Orange</h3>
+        <p>Oranges are round orange-coloured fruit that grow on a tree which can reach 10 metres (33 ft) high. Orange trees have dark green shiny leaves and small white flowers with five petals. The flowers smell very sweet which attracts many bees.</p>
+    </div>
+    <div class="items">
+        <h3>Banana</h3>
+        <p>Bananas are one of the most popular fruits worldwide. They contain essential nutrients that can have a protective impact on health.</p>
+    </div>
+    <div class="items">
+        <h3>Malta</h3>
+        <p>The orange is the fruit of various citrus species in the family Rutaceae; it primarily refers to Citrus × sinensis, which is also called sweet orange, to distinguish it from the related Citrus × aurantium, referred to as bitter orange.</p>
+    </div>
+
 </body>
 </html>
